# g3507_template

./: .gitignore  CMakeLists.txt  build_log.txt  empty.c  empty.syscfg  flash_log.txt  monitor.py  readme.md  run_keil.bat  ti_msp_dl_config.c  ti_msp_dl_config.h
.tocodex/plans/: 2026-04-24_16-44-11_建议先做-文件职责重组-再做-目录迁移-基于你当前-le.md  2026-04-24_17-04-05_我已经分析了现有-key-和-encoder-的驱动.md  2026-04-24_17-47-21_下面是推荐实施方案-该改动会影响多文件和核心逻辑-我先明确受.md
.tocodex/progress/: 019dbfbb-b1cc-706c-9d86-e29faecd0ba0.json  019dc08a-f53d-708a-80a6-bdb21162c5e5.json
Mid/: FreeRTOSConfig.h  FreeRTOS_demo.c  FreeRTOS_demo.h  my_freetros_lib.c  my_freetros_lib.h
Mid/source/: tasks.c
MyUsed/MyApps/: car_app.c  car_app.h  imu_app.c  imu_app.h  usart_app.c  usart_app.h  xunji_app.c  xunji_app.h  yuntai_app.c  yuntai_app.h
MyUsed/MyBSP/: bsp_gpio.c  bsp_gpio.h  bsp_iic.c  bsp_iic.h  bsp_spi.c  bsp_spi.h
MyUsed/MyBoards/: buzzer_board.c  buzzer_board.h  encoder_board.c  encoder_board.h  icm42688_board.c  icm42688_board.h  key_board.c  key_board.h  led_board.c  led_board.h  motor_board.c  motor_board.h  oled_board.c  oled_board.h  stepper_board.c  stepper_board.h  xunji_board.c  xunji_board.h
MyUsed/MyCore/: device_base.h  device_ops.h
MyUsed/MyDevices/: OLED_driver.c  OLED_driver.h  buzzer_driver.c  buzzer_driver.h  encoder_driver.c  encoder_driver.h  icm42688_driver.c  icm42688_driver.h  key_driver.c  key_driver.h  led_driver.c  led_driver.h  (+6 more)
docs/: myused_five_layer_architecture.md
keil/: JLinkLog.txt  MSPG3507_FreeRTOS.uvprojx  mspg3507_freertos.uvoptx  startup_mspm0g350x_uvision.s
(+71 files in other folders)
